# db-iris-wrapper

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.postgres.yaml  docker-compose.yaml
app/: .dockerignore  .gitignore  eslint.config.js  index.html  openapi-ts.config.ts  package.json
app/src/: atoms.ts  (+9 more)
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: main.rs
crates/core/: Cargo.toml  diesel.toml
crates/core/migrations/2025-09-09-134608_init_schemas/: down.sql  up.sql
crates/core/migrations/2025-09-09-135916_create_stops/: down.sql  up.sql
crates/core/migrations/2025-09-15-154742_create_status_codes/: down.sql  up.sql
crates/core/migrations/2025-09-18-114855_add_current_times_to_stops/: down.sql  up.sql
crates/core/migrations/2025-09-20-204205_add_last_updated_to_messages/: down.sql  up.sql
crates/core/migrations/2025-09-22-134801_create_message_to_stops_table/: down.sql  up.sql
crates/core/migrations/2025-09-23-121637_restart_message_table_with_changed_ids/: down.sql  up.sql
crates/core/src/: codes.rs  data.rs  db.rs  import.rs  ingest.rs  io.rs  lib.rs  model.rs  ports.rs  repos.rs  service.rs  train.rs  usecases.rs  utils.rs
crates/core/src/data/: db.rs  repos.rs
crates/core/src/data/db/: row.rs  schema.rs
crates/core/src/data/db/row/: message.rs  message_to_station.rs  station.rs  status_code.rs  stop.rs  train.rs
crates/core/src/data/repos/: message_repo.rs  station_repo.rs  status_code_repo.rs  stop_repo.rs  train_repo.rs  utils.rs
crates/core/src/db/: model.rs  schema.rs
crates/core/src/io/: status_code_excel.rs
crates/core/src/model/: error.rs  message.rs  station.rs  status_code.rs  stop.rs  train.rs
crates/core/tests/: common.rs  excel_tests.rs  import_tests.rs
crates/core/tests/data/: codes.xlsx  stations.sql
crates/web/: Cargo.toml
crates/web/src/: common.rs  index.rs  lib.rs  messages.rs  routes.rs  service.rs  station.rs  stations.rs  trains.rs  views.rs
crates/web/src/common/: error.rs  params.rs
crates/web/src/routes/: index.rs  messages.rs  stations.rs  status_codes.rs  trains.rs
(+32 files in other folders)
