[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
thiserror = "2.0.16"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rocket = {version= "0.5.1", features = ["json"]}
log = "0.4.28"
dotenvy = "0.15.0"
rocket_okapi = {version = "0.9.0", features = ["swagger", "rapidoc"]}
schemars = {version = "0.8.22", features = ["chrono"]}
chrono-tz = "0.10.4"
