[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "db-iris-wrapper"
path = "src/main.rs"

[dependencies]
web = {path = "../web"}
wrapper-core = {path = "../core"}
quick-xml = {version = "0.38.3", features = ["serialize"]}
serde = { workspace = true }
chrono = { workspace = true }
rocket = { workspace = true }
dotenvy = { workspace = true }

ureq = "=2.12.1"
thiserror = "2.0.16"
pretty_env_logger = "0.5.0"
log = { workspace = true }
