[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
wrapper-core = { path = "../core" }
rocket = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
rocket_okapi = { workspace = true }
schemars = { workspace = true }
chrono-tz = { workspace = true }
rocket_cors = "0.6.0"
log = {workspace = true}
